apps/foo/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-namespace
  namespace: foo
spec:
  selector:
    app: echo-namespace
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
