apps/foo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-namespace
  namespace: foo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - echo.foo.c01.k8s-workshop.dev
    secretName: echo-namespace-cert
  ingressClassName: nginx
  rules:
  - host: echo.foo.c01.k8s-workshop.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-namespace
            port:
              number: 80
